WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
73940
AX: aria-hidden inheritance broken when applying to some descendants
https://bugs.webkit.org/show_bug.cgi?id=73940
Summary
AX: aria-hidden inheritance broken when applying to some descendants
chris fleizach
Reported
2011-12-06 11:49:29 PST
If you use aria-hidden to toggle an object's visibility, then it objects that are NOT ignored and are direct descendants of the object that is toggled will NOT be updated, and will return the incorrect child hierarchy
Attachments
patch
(8.41 KB, patch)
2011-12-06 12:20 PST
,
chris fleizach
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2011-12-06 12:08:00 PST
The fix is that we need to clearChildren() before we add a child in addChildren() for ALL elements (before we were just doing it for ignored elements)
chris fleizach
Comment 2
2011-12-06 12:20:25 PST
Created
attachment 118089
[details]
patch
chris fleizach
Comment 3
2011-12-06 12:21:08 PST
rdar://10452441
chris fleizach
Comment 4
2011-12-12 10:01:54 PST
Comment on
attachment 118089
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=118089&action=review
> Source/WebCore/accessibility/AccessibilityTable.cpp:376 > + AccessibilityTableHeaderContainer* tableHeader = static_cast<AccessibilityTableHeaderContainer*>(axObjectCache()->getOrCreate(TableHeaderContainerRole));
I think i can remove the cast to AccessibilityTableHeaderContainer as it's probably unnecessary.
chris fleizach
Comment 5
2011-12-12 15:54:59 PST
http://trac.webkit.org/changeset/102634
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug