AX: aria-hidden inheritance broken when applying to some descendants https://bugs.webkit.org/show_bug.cgi?id=73940

Reviewed by Darin Adler.

Source/WebCore:

When adding children, we were not updating the children cache for direct AX descendants.
This meant that toggling aria-hidden could result in a stale cache where elements would not be reachable.

Making this fix also exposed a problem in AccessibilityTable where the AccessibilityHeaderObject was not
being managed correctly as a mock element.

Test: platform/mac/accessibility/aria-hidden-changes-for-non-ignored-elements.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::addChildren):
* accessibility/AccessibilityTable.cpp:
(WebCore::AccessibilityTable::clearChildren):
(WebCore::AccessibilityTable::headerContainer):
* accessibility/AccessibilityTable.h:

LayoutTests:

* platform/mac/accessibility/aria-hidden-changes-for-non-ignored-elements-expected.txt: Added.
* platform/mac/accessibility/aria-hidden-changes-for-non-ignored-elements.html: Added.



Canonical link: https://commits.webkit.org/91029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102634 268f45cc-cd09-0410-ab3c-d52691b4dbfc