Source/WebCore/accessibility/AccessibilityTable.h
@@ -41,7 +41,6 @@
 namespace WebCore {
 
 class AccessibilityTableCell;
-class AccessibilityTableHeaderContainer;
     
 class AccessibilityTable : public AccessibilityRenderObject {
 
@@ -86,7 +85,7 @@ protected:
     AccessibilityChildrenVector m_rows;
     AccessibilityChildrenVector m_columns;
 
-    AccessibilityTableHeaderContainer* m_headerContainer;
+    RefPtr<AccessibilityObject> m_headerContainer;
     mutable bool m_isAccessibilityTable;
 
     bool hasARIARole() const;
